examples/errors/parsing/state-lowercase-prim.cn
main : () [impure] =
  let p = new[int] 0;
  ()
